# ti-platform

./: .env.example  .gitignore  CLAUDE.md  IP_ENRICHMENT_RESEARCH.md  IP_ENRICHMENT_SETUP.md  IP_ENRICHMENT_SUMMARY.md  PLAYWRIGHT_MIGRATION.md  QUICK_START.txt  README.md  SETUP_2FA.md  check_overlap.py  config.yml  extract_google_auth_qr.py  pyproject.toml  quick_test.py  test_nav.py
examples/: ip_enrichment_example.py
src/cli/: commands.py  enrichment_commands.py  main.py
src/core/: base_scraper.py  config.py  exceptions.py  models.py  startup.py
src/core/plugin_system/: __init__.py  registry.py
src/plugins/: __init__.py
src/plugins/enrichers/: __init__.py  base.py  cache.py  cloud_detection.py  comprehensive_enricher.py  geolocation.py  models.py  network.py  rate_limiter.py  scanner_detection.py  threat_intelligence.py
src/plugins/exporters/: __init__.py  csv_exporter.py  stix_exporter.py
src/plugins/scrapers/: __init__.py
src/scrapers/crowdstrike/: scraper.py  selectors.py
src/scrapers/mandiant/: scraper.py  selectors.py
src/services/: __init__.py
src/services/ioc_processor/: __init__.py  batch_processor.py  enrichment_engine.py
src/utils/: auth_handler.py  data_processor.py  file_handler.py  playwright_auth_handler.py  playwright_helper.py  selenium_helper.py
src/vscode_extension/src/: extension.ts
src/vscode_extension/src/services/: tiPlatformService.ts
