[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "threat-intelligence-platform"
version = "0.2.0"
description = "Advanced threat intelligence collection and analysis platform"
authors = [{name = "Alexander LIM", email = "alexander@example.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"

dependencies = [
    "playwright>=1.40.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "click>=8.0.0",
    "requests>=2.28.0",
    "urllib3>=1.26.0",
    "aiohttp>=3.9.0",
    "maxminddb>=2.2.0",
    "geoip2>=4.7.0",
    "stix2>=3.0.0",
    "asyncio-throttle>=1.0.0",
    "tldextract>=5.0.0",
    "validators>=0.22.0",
    "rich>=13.0.0",
    "pyotp>=2.8.0",
    # IP Enrichment dependencies
    "shodan>=1.31.0",
    "ipaddress>=1.0.23",
    "dnspython>=2.4.0",
    "censys>=2.2.0",
    "aiocache>=0.12.2",
    "aioredis>=2.0.1",
    "aiosqlite>=0.19.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0"
]

[project.scripts]
ti-platform = "src.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
